# vibescan

./: .gitignore  .vibescan.yml  LICENSE  README.md  _gif_scene.py  _repro_test.py  _scan_preview.py  _scene1.py  _test.py  dashboard.html  demo_aws.py  demo_terminal.py  demo_vulnerable.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: scan.yml
demo_project/: app.py  config.py
hooks/: pre-push
tests/: test_entropy.py  test_scanner.py
tests/fixtures/: vulnerable_app.py
vibescan/: __init__.py  cli.py  config.py  fixer.py  git_hook.py  pr_bot.py  reporter.py  scanner.py  team_report.py  validator.py
vibescan/rules/: ai_risk_patterns.py  entropy.py  secrets.py  vibe_patterns.py
