[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibescan-ai"
version = "1.0.0"
description = "Security scanner for AI-generated (vibe-coded) code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tanisha Kushwah", email = "tanikush@example.com"}
]
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "colorama>=0.4",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
vibescan = "vibescan.cli:main"

[project.urls]
Homepage = "https://github.com/tanikush/vibescan"
Repository = "https://github.com/tanikush/vibescan"

[tool.setuptools.packages.find]
where = ["."]